flow: toc support for {path: "custom/path.md"}